Ticket #27514: Add configuration options on TLForeignKeyBinding for importing a reference with a custom set of key columns. Add a normalizer for such columns.

--- a/com.top_logic.element/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_de.properties
@@ -1559,7 +1559,7 @@ com.top_logic.element.model.jdbcBinding.JdbcDataImporter.Config.module = Modul
 com.top_logic.element.model.jdbcBinding.JdbcDataImporter.Config.module.tooltip = Das <i>Modul</i>, das die zu importierenden Typen definiert.
 com.top_logic.element.model.jdbcBinding.JdbcDataImporter.Config.poolName = Name des Pools
 com.top_logic.element.model.jdbcBinding.JdbcDataImporter.Config.poolName.tooltip = Name des Verbindungspools, aus dem Daten importiert werden sollen.
-com.top_logic.element.model.jdbcBinding.JdbcDataImporter.tooltip = <i>Befehlshandler</i> zum Importieren eines Modells aus einer bestehenden Datenbank.
+com.top_logic.element.model.jdbcBinding.JdbcDataImporter.tooltip = <i>Befehlshandler</i> zum Importieren eines Modells aus einer bestehenden Datenbank. <p> Verwendet die folgenden Annotationen: <ul> <li>TLTableBinding</li> <li>TLColumnBinding</li> <li>TLLinkTableBinding</li> <li>TLForeignKeyBinding</li> <li>TLReverseForeignKeyBinding</li> </ul> </p>
 com.top_logic.element.model.jdbcBinding.JdbcSchemaImporter = Jdbc-Schema-Importer
 com.top_logic.element.model.jdbcBinding.JdbcSchemaImporter.Config.excludeColumnPattern = Spaltenausschlussmuster
 com.top_logic.element.model.jdbcBinding.JdbcSchemaImporter.Config.excludeColumnPattern.tooltip = Regulärer Ausdruck für Spaltennamen, die nicht importiert werden sollen.
@@ -1579,6 +1579,16 @@ com.top_logic.element.model.jdbcBinding.api.annotate.TLColumnBinding.parser = Pa
 com.top_logic.element.model.jdbcBinding.api.annotate.TLColumnBinding.parser.tooltip = Eine optionale Wertkonvertierung, die den Spaltenwert beim Import auf einen Anwendungswert abbildet.
 com.top_logic.element.model.jdbcBinding.api.annotate.TLColumnBinding.tooltip = <i>Attribut-Annotation</i>, die die Spalte angibt, von/zu der die annotierte <i>Objekteigenschaft</i> beim Import/Export von/zu einem externen relationalen Schema gebunden wird. <p> Beim Import wird der Wert der Spalte verwendet, um die Eigenschaft zu setzen. Beim Export wird der Wert der Eigenschaft verwendet, um den Spaltenwert zu aktualisieren. </p>
 com.top_logic.element.model.jdbcBinding.api.annotate.TLForeignKeyBinding = Bindung an Fremdschlüssel
+com.top_logic.element.model.jdbcBinding.api.annotate.TLForeignKeyBinding$KeyColumnConfig = Konfiguration der Schlüsselspalte
+com.top_logic.element.model.jdbcBinding.api.annotate.TLForeignKeyBinding$KeyColumnConfig.tooltip = Die Konfiguration für eine nicht-triviale Fremdschlüsselspalte.
+com.top_logic.element.model.jdbcBinding.api.annotate.TLForeignKeyBinding.KeyColumnConfig.normalizer = Normalisierer
+com.top_logic.element.model.jdbcBinding.api.annotate.TLForeignKeyBinding.KeyColumnConfig.normalizer.tooltip = Der <i>Schlüsselspalten-Normalisierer</i> für diese Spalte.
+com.top_logic.element.model.jdbcBinding.api.annotate.TLForeignKeyBinding.KeyColumnConfig.source-column = Quelle: Spalte
+com.top_logic.element.model.jdbcBinding.api.annotate.TLForeignKeyBinding.KeyColumnConfig.source-column.tooltip = Der Name der Spalte in dieser Tabelle.
+com.top_logic.element.model.jdbcBinding.api.annotate.TLForeignKeyBinding.KeyColumnConfig.target-column = Zielspalte
+com.top_logic.element.model.jdbcBinding.api.annotate.TLForeignKeyBinding.KeyColumnConfig.target-column.tooltip = Die Spalte in der Fremdtabelle, deren Werte als Schlüssel verwendet werden.
+com.top_logic.element.model.jdbcBinding.api.annotate.TLForeignKeyBinding.column-configs = Spalten-Konfigurationen
+com.top_logic.element.model.jdbcBinding.api.annotate.TLForeignKeyBinding.column-configs.tooltip = Die Konfiguration für nicht-triviale Fremdschlüsselspalten.
 com.top_logic.element.model.jdbcBinding.api.annotate.TLForeignKeyBinding.columns = Spalten
 com.top_logic.element.model.jdbcBinding.api.annotate.TLForeignKeyBinding.columns.tooltip = Die Spalten, deren Werte zur Identifizierung des Zielobjekts der annotierten <i>Referenz</i> verwendet werden.
 com.top_logic.element.model.jdbcBinding.api.annotate.TLForeignKeyBinding.tooltip = <i>Attribut-Annotation</i> für eine <i>Referenz</i>, die das Zielobjekt anhand der Werte in den angegebenen Spalten identifiziert. <p> Das Zielobjekt wird gefunden, indem die Werte in den angegebenen Spalten mit den Werten der Primärschlüsselspalten der Zieltabelle verglichen werden. </p>
