--- a/com.top_logic.element/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_en.properties
@@ -1559,7 +1559,7 @@ com.top_logic.element.model.jdbcBinding.JdbcDataImporter.Config.module = Module
 com.top_logic.element.model.jdbcBinding.JdbcDataImporter.Config.module.tooltip = The <i>module</i> that defines the types to import.
 com.top_logic.element.model.jdbcBinding.JdbcDataImporter.Config.poolName = Pool name
 com.top_logic.element.model.jdbcBinding.JdbcDataImporter.Config.poolName.tooltip = Name of the connection pool to import data from.
-com.top_logic.element.model.jdbcBinding.JdbcDataImporter.tooltip = <i>Command handler</i> importing a model from an existing database.
+com.top_logic.element.model.jdbcBinding.JdbcDataImporter.tooltip = <i>Command handler</i> importing a model from an existing database. <p> Uses the following annotations: <ul> <li>TLTableBinding</li> <li>TLColumnBinding</li> <li>TLLinkTableBinding</li> <li>TLForeignKeyBinding</li> <li>TLReverseForeignKeyBinding</li> </ul> </p>
 com.top_logic.element.model.jdbcBinding.JdbcSchemaImporter = Jdbc schema importer
 com.top_logic.element.model.jdbcBinding.JdbcSchemaImporter.Config.excludeColumnPattern = Exclude column pattern
 com.top_logic.element.model.jdbcBinding.JdbcSchemaImporter.Config.excludeColumnPattern.tooltip = Regular expression matching column names that should not be imported.
@@ -1579,6 +1579,16 @@ com.top_logic.element.model.jdbcBinding.api.annotate.TLColumnBinding.parser = Pa
 com.top_logic.element.model.jdbcBinding.api.annotate.TLColumnBinding.parser.tooltip = An optional value conversion that maps the column value to an application value during import.
 com.top_logic.element.model.jdbcBinding.api.annotate.TLColumnBinding.tooltip = <i>Attribute annotation</i> specifying the column from/to which the annotated <i>object property</i> is bound during import/export from/to an external relational schema. <p> During import, the value of the column is used to set the property. During export, the value of the property is used to update the column value. </p>
 com.top_logic.element.model.jdbcBinding.api.annotate.TLForeignKeyBinding = Foreign key binding
+com.top_logic.element.model.jdbcBinding.api.annotate.TLForeignKeyBinding$KeyColumnConfig = Key column configuration
+com.top_logic.element.model.jdbcBinding.api.annotate.TLForeignKeyBinding$KeyColumnConfig.tooltip = The configuration for a non-trivial foreign key column.
+com.top_logic.element.model.jdbcBinding.api.annotate.TLForeignKeyBinding.KeyColumnConfig.normalizer = Normalizer
+com.top_logic.element.model.jdbcBinding.api.annotate.TLForeignKeyBinding.KeyColumnConfig.normalizer.tooltip = The <i>key column normalizer</i> for this column.
+com.top_logic.element.model.jdbcBinding.api.annotate.TLForeignKeyBinding.KeyColumnConfig.source-column = Source column
+com.top_logic.element.model.jdbcBinding.api.annotate.TLForeignKeyBinding.KeyColumnConfig.source-column.tooltip = The name of the column in this table.
+com.top_logic.element.model.jdbcBinding.api.annotate.TLForeignKeyBinding.KeyColumnConfig.target-column = Target column
+com.top_logic.element.model.jdbcBinding.api.annotate.TLForeignKeyBinding.KeyColumnConfig.target-column.tooltip = The column in the foreign table whose values are used as keys.
+com.top_logic.element.model.jdbcBinding.api.annotate.TLForeignKeyBinding.column-configs = Column configs
+com.top_logic.element.model.jdbcBinding.api.annotate.TLForeignKeyBinding.column-configs.tooltip = The configuration for non-trivial foreign key columns.
 com.top_logic.element.model.jdbcBinding.api.annotate.TLForeignKeyBinding.columns = Columns
 com.top_logic.element.model.jdbcBinding.api.annotate.TLForeignKeyBinding.columns.tooltip = The columns whose values are use to identify the target object of the annotated <i>reference</i>.
 com.top_logic.element.model.jdbcBinding.api.annotate.TLForeignKeyBinding.tooltip = <i>Attribute annotation</i> for a <i>reference</i> that identifies the target object by the values in the given columns. <p> The target object is found by comparing the values in the given columns with the values of the primary key columns of the target table. </p>
