--- a/tl-importer-jdbc/src/main/java/META-INF/messages_de.properties
+++ b/tl-importer-jdbc/src/main/java/META-INF/messages_de.properties
@@ -1,4 +1,8 @@
 com.top_logic.importer.jdbc.ColumnParserByExpression = Spaltenparser nach Ausdruck
 com.top_logic.importer.jdbc.ColumnParserByExpression.Config.expression = Ausdruck
 com.top_logic.importer.jdbc.ColumnParserByExpression.Config.expression.tooltip = Der Ausdruck, der den Rohdatenbankwert analysiert. <p> Der Ausdruck erwartet einen einzigen Wert (den Rohdatenbankwert) und gibt den Anwendungswert zurück. </p>
-com.top_logic.importer.jdbc.ColumnParserByExpression.tooltip = Konfigurierbarer <i>Spaltenparser</i> unter Verwendung eines TL-Script-Ausdrucks.
+com.top_logic.importer.jdbc.ColumnParserByExpression.tooltip = Analysiert den Wert mit einem TL-Script Ausdruck.
+com.top_logic.importer.jdbc.KeyColumnNormalizerByExpression = Schlüsselspalten Normalisierer nach Ausdruck
+com.top_logic.importer.jdbc.KeyColumnNormalizerByExpression.Config.expression = Ausdruck
+com.top_logic.importer.jdbc.KeyColumnNormalizerByExpression.Config.expression.tooltip = Der Ausdruck, der den Rohwert der Datenbank normalisiert. <p> Der Ausdruck erwartet einen einzelnen Wert (den Rohdatenbankwert) und gibt den normalisierten Wert zurück. </p>
+com.top_logic.importer.jdbc.KeyColumnNormalizerByExpression.tooltip = Normalisiert den Schlüssel mit einem TL-Script Ausdruck.
