--- a/tl-importer-jdbc/src/main/java/META-INF/messages_en.properties
+++ b/tl-importer-jdbc/src/main/java/META-INF/messages_en.properties
@@ -1,4 +1,8 @@
 com.top_logic.importer.jdbc.ColumnParserByExpression = Column parser by expression
 com.top_logic.importer.jdbc.ColumnParserByExpression.Config.expression = Expression
 com.top_logic.importer.jdbc.ColumnParserByExpression.Config.expression.tooltip = The expression parsing the raw database value. <p> The expression expects a single value (the raw database value) and returns the application value. </p>
-com.top_logic.importer.jdbc.ColumnParserByExpression.tooltip = Configurable <i>column parser</i> using a TL-Script expression.
+com.top_logic.importer.jdbc.ColumnParserByExpression.tooltip = Parses the value with a TL-Script expression.
+com.top_logic.importer.jdbc.KeyColumnNormalizerByExpression = Key column normalizer by expression
+com.top_logic.importer.jdbc.KeyColumnNormalizerByExpression.Config.expression = Expression
+com.top_logic.importer.jdbc.KeyColumnNormalizerByExpression.Config.expression.tooltip = The expression normalizing the raw database value. <p> The expression expects a single value (the raw database value) and returns the normalized value. </p>
+com.top_logic.importer.jdbc.KeyColumnNormalizerByExpression.tooltip = Normalizes the key with a TL-Script expression.
