--- a/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
@@ -14,6 +14,8 @@ class.com.top_logic.model.search.expr.config.operations.I18NConstants.ERROR_UNEX
 class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_BINARY_DATA_EXPECTED__ACTUAL_EXPR = Binary data expected in "{1}" but got "{0}".
 class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_CONVERSION_FAILED__MSG_EXPR = Conversion in "{1}" failed: {0}
 class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_INVALID_CONTENT_TYPE_SPECIFIED__VALUE_MSG = Invalid content type "{0}" specified: {1}
+class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_UNSUPPORTED_CONTENT_TYPE__VALUE_MSG = The specified input type "{0}" is not supported.
+class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_INVALID_CELL_ENTRY__VALUE_MSG = Invalid row selection. Given is "{0}", expected is "{1}".
 class.com.top_logic.model.search.expr.config.operations.revision.I18NConstants.ERROR_NEGATIVE_COMMIT_NR__EXPR_COMMIT = The given commit number {1} must not be negative: {0}
 class.com.top_logic.model.search.expr.config.operations.revision.I18NConstants.ERROR_REVISION_ARGUMENT_NULL__EXPR = The given revision is null in: {0}.
 class.com.top_logic.model.search.expr.config.operations.revision.I18NConstants.ERROR_UNKNOWN_COMMIT_NR__EXPR_COMMIT = The given commit number {1} is unknown: {0}
