Ticket #28173: Added missing resource keys.

--- a/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
@@ -590,6 +590,8 @@ com.top_logic.model.search.expr.config.operations.binary.Binary$Builder = Erstel
 com.top_logic.model.search.expr.config.operations.binary.Binary$Builder.tooltip = <i>Methodenersteller</i> zur Erstellung von <i>Binärdaten</i>.
 com.top_logic.model.search.expr.config.operations.binary.ParseCSV$Builder = Erbauer
 com.top_logic.model.search.expr.config.operations.binary.ParseCSV$Builder.tooltip = <i>Erbauer einer Methode</i> zum <i>Parsen von CSV</i>.
+com.top_logic.model.search.expr.config.operations.binary.ParseExcel$Builder = Erbauer
+com.top_logic.model.search.expr.config.operations.binary.ParseExcel$Builder.tooltip = <i>Erbauer einer Methode</i> zum <i>Parsen von Excel-Dateien</i>.
 com.top_logic.model.search.expr.config.operations.binary.ParseJson$Builder = Erbauer
 com.top_logic.model.search.expr.config.operations.binary.ParseJson$Builder.tooltip = <i>Erbauer einer Methode</i> zum <i>Parsen von JSON</i>.
 com.top_logic.model.search.expr.config.operations.binary.Pdf2Txt$Builder = Erbauer
