Ticket #28173: Built resources.

--- a/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
@@ -13,9 +13,9 @@ class.com.top_logic.model.search.expr.config.operations.I18NConstants.ERROR_TWO_
 class.com.top_logic.model.search.expr.config.operations.I18NConstants.ERROR_UNEXPECTED_ARGUMENT__FUN_CNT = Unerwartete Anzahl von Argumenten beim Aufruf der Funktion "{0}", die Funktion erwartet nicht mehr als {1} Argumente.
 class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_BINARY_DATA_EXPECTED__ACTUAL_EXPR = In "{1}" werden Binäre Daten erwartet, erhalten wurde aber "{0}".
 class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_CONVERSION_FAILED__MSG_EXPR = Umwandlung in "{1}" fehlgeschlagen: {0}
-class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_INVALID_CELL_ENTRY__VALUE_MSG = Ungültiger Zeileneingabe. "{0}" angegeben erwartet ist "{1}".
+class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_INVALID_CELL_ENTRY__VALUE_MSG = Kopfzeilen sollten in der gleichen Zeile{1}" sein, aber{0}" bekommen.
 class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_INVALID_CONTENT_TYPE_SPECIFIED__VALUE_MSG = Ungültiger Inhaltstyp "{0}" angegeben: {1}
-class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_UNSUPPORTED_CONTENT_TYPE__VALUE_MSG = Die angegebene Eingabe "{0}" wird nicht unterstützt.
+class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_UNSUPPORTED_CONTENT_TYPE__VALUE_MSG = Der angegebene Inhaltstyp{0}" wird nicht unterstützt.
 class.com.top_logic.model.search.expr.config.operations.revision.I18NConstants.ERROR_NEGATIVE_COMMIT_NR__EXPR_COMMIT = Die angegebene Commit-Nummer {1} darf nicht negativ sein: {0}
 class.com.top_logic.model.search.expr.config.operations.revision.I18NConstants.ERROR_REVISION_ARGUMENT_NULL__EXPR = Die angegebene Revision ist null in: {0}.
 class.com.top_logic.model.search.expr.config.operations.revision.I18NConstants.ERROR_UNKNOWN_COMMIT_NR__EXPR_COMMIT = Die angegebene Commit-Nummer {1} ist unbekannt: {0}
@@ -591,6 +591,8 @@ com.top_logic.model.search.expr.config.operations.binary.Binary$Builder = Erstel
 com.top_logic.model.search.expr.config.operations.binary.Binary$Builder.tooltip = <i>Methodenersteller</i> zur Erstellung von <i>Binärdaten</i>.
 com.top_logic.model.search.expr.config.operations.binary.ParseCSV$Builder = Erbauer
 com.top_logic.model.search.expr.config.operations.binary.ParseCSV$Builder.tooltip = <i>Erbauer einer Methode</i> zum <i>Parsen von CSV</i>.
+com.top_logic.model.search.expr.config.operations.binary.ParseExcel$Builder = Erbauer
+com.top_logic.model.search.expr.config.operations.binary.ParseExcel$Builder.tooltip = <i>Erbauer von Methoden</i> zum <i>Parsen von Excel</i>.
 com.top_logic.model.search.expr.config.operations.binary.ParseJson$Builder = Erbauer
 com.top_logic.model.search.expr.config.operations.binary.ParseJson$Builder.tooltip = <i>Erbauer einer Methode</i> zum <i>Parsen von JSON</i>.
 com.top_logic.model.search.expr.config.operations.binary.Pdf2Txt$Builder = Erbauer
