Ticket #27514: Add `ConstantTypeSelector` to choose a different target type for the import than the annotated class. Improve the error logging a bit. Simplify `KeyColumnNormalizerByExpression`.

--- a/tl-importer-jdbc/src/main/java/META-INF/messages_de.properties
+++ b/tl-importer-jdbc/src/main/java/META-INF/messages_de.properties
@@ -2,6 +2,10 @@ com.top_logic.importer.jdbc.ColumnParserByExpression = Spaltenparser nach Ausdru
 com.top_logic.importer.jdbc.ColumnParserByExpression.Config.expression = Ausdruck
 com.top_logic.importer.jdbc.ColumnParserByExpression.Config.expression.tooltip = Der Ausdruck, der den Rohdatenbankwert analysiert. <p> Der Ausdruck erwartet einen einzigen Wert (den Rohdatenbankwert) und gibt den Anwendungswert zurück. </p>
 com.top_logic.importer.jdbc.ColumnParserByExpression.tooltip = Analysiert den Wert mit einem TL-Script Ausdruck.
+com.top_logic.importer.jdbc.ConstantTypeSelector = Konstante Typauswahl
+com.top_logic.importer.jdbc.ConstantTypeSelector.Config.type = Typ
+com.top_logic.importer.jdbc.ConstantTypeSelector.Config.type.tooltip = Der zurückzugebende <i>Business-Objekttyp</i>.
+com.top_logic.importer.jdbc.ConstantTypeSelector.tooltip = Gibt einen konfigurierten <i>Business-Objekttyp</i> zurück.
 com.top_logic.importer.jdbc.KeyColumnNormalizerByExpression = Schlüsselspalten Normalisierer nach Ausdruck
 com.top_logic.importer.jdbc.KeyColumnNormalizerByExpression.Config.expression = Ausdruck
 com.top_logic.importer.jdbc.KeyColumnNormalizerByExpression.Config.expression.tooltip = Der Ausdruck, der den Rohwert der Datenbank normalisiert. <p> Der Ausdruck erwartet einen einzelnen Wert (den Rohdatenbankwert) und gibt den normalisierten Wert zurück. </p>
