--- a/tl-importer-jdbc/src/main/java/META-INF/messages_en.properties
+++ b/tl-importer-jdbc/src/main/java/META-INF/messages_en.properties
@@ -2,6 +2,10 @@ com.top_logic.importer.jdbc.ColumnParserByExpression = Column parser by expressi
 com.top_logic.importer.jdbc.ColumnParserByExpression.Config.expression = Expression
 com.top_logic.importer.jdbc.ColumnParserByExpression.Config.expression.tooltip = The expression parsing the raw database value. <p> The expression expects a single value (the raw database value) and returns the application value. </p>
 com.top_logic.importer.jdbc.ColumnParserByExpression.tooltip = Parses the value with a TL-Script expression.
+com.top_logic.importer.jdbc.ConstantTypeSelector = Constant type selector
+com.top_logic.importer.jdbc.ConstantTypeSelector.Config.type = Type
+com.top_logic.importer.jdbc.ConstantTypeSelector.Config.type.tooltip = The <i>business object type</i> to be returned.
+com.top_logic.importer.jdbc.ConstantTypeSelector.tooltip = Returns a configured <i>business object type</i>.
 com.top_logic.importer.jdbc.KeyColumnNormalizerByExpression = Key column normalizer by expression
 com.top_logic.importer.jdbc.KeyColumnNormalizerByExpression.Config.expression = Expression
 com.top_logic.importer.jdbc.KeyColumnNormalizerByExpression.Config.expression.tooltip = The expression normalizing the raw database value. <p> The expression expects a single value (the raw database value) and returns the normalized value. </p>
