Ticket #27514: Extract an abstract super class for commands that change the DB schema.

--- a/com.top_logic.element/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_de.properties
@@ -2280,6 +2280,8 @@ com.top_logic.element.structured.util.StructureRootDisabledExecRule.Config.hidde
 com.top_logic.element.structured.util.StructureRootDisabledExecRule.Config.i18n-reason-key = Schlüssel zur Internationalisierung
 com.top_logic.element.structured.util.StructureRootDisabledExecRule.Config.i18n-reason-key.tooltip = Grund für die Deaktivierung des Befehls für Stammobjekte.
 com.top_logic.element.structured.util.StructureRootDisabledExecRule.tooltip = <i>Ausführbarkeitsregel</i>, die einen Befehl für einen Struktur-Wurzelknoten deaktiviert oder verbirgt.
+com.top_logic.element.util.dbadmin.DBSchemaChangingCommand = Befehl zum Ändern des Datenbankschemas
+com.top_logic.element.util.dbadmin.DBSchemaChangingCommand.tooltip = <i>Befehlshandler</i>, der die Schemakonfiguration in das Dateisystem zurückschreibt. <p> Beim nächsten Start werden die Änderungen übernommen (wenn nur Änderungen vorgenommen werden, die eine automatische Migration unterstützen). </p>
 com.top_logic.element.util.dbadmin.DeleteTable = Tabelle löschen
 com.top_logic.element.util.dbadmin.DeleteTable.tooltip = <i>Befehl</i>, der einen Tabellentyp entfernt, wenn er nicht verwendet wird.
 com.top_logic.element.util.dbadmin.IDESchemaExtractCommand = Befehl zum Extrahieren von IDE-Schemata
