--- a/com.top_logic.element/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_en.properties
@@ -2246,6 +2246,8 @@ com.top_logic.element.structured.util.StructureRootDisabledExecRule.Config.hidde
 com.top_logic.element.structured.util.StructureRootDisabledExecRule.Config.i18n-reason-key = Internationalization reason key
 com.top_logic.element.structured.util.StructureRootDisabledExecRule.Config.i18n-reason-key.tooltip = Reason to disable the command for root objects.
 com.top_logic.element.structured.util.StructureRootDisabledExecRule.tooltip = <i>Executability rule</i> that disables or hides a command for a structure root node.
+com.top_logic.element.util.dbadmin.DBSchemaChangingCommand = Database schema changing command
+com.top_logic.element.util.dbadmin.DBSchemaChangingCommand.tooltip = <i>Command handler</i> that writes back the schema configuration to the file system. <p> During next boot, the changes will be applied (if only changes are performed that support automatic migration). </p>
 com.top_logic.element.util.dbadmin.DeleteTable = Delete table
 com.top_logic.element.util.dbadmin.DeleteTable.tooltip = <i>Command</i> that removes a table type, if it is not used.
 com.top_logic.element.util.dbadmin.IDESchemaExtractCommand = IDE schema extract command
