Ticket #27514: Add a generator for a `meta.xml` for a `TLModule`.

--- a/com.top_logic.element/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_de.properties
@@ -35,6 +35,7 @@ class.com.top_logic.element.meta.kbbased.storage.I18NConstants.ERROR_VALUE_IS_NO
 class.com.top_logic.element.model.I18NConstants.ERROR_UNDEFINED_ATTRIBUTE_TYPE__TYPE_ATTR_LOCATION = Undefinierter Typ ''{0}'' im Modul im Attribut ''{1}'' bei ''{2}''.
 class.com.top_logic.element.model.export.ui.I18NConstants.NEW_MODULE_CONFIGURATION = Neue Modulkonfigurationsdatei erstellt und in die Anwendungskonfiguration eingetragen. Die Konfiguration muss neu geladen werden und alle Sitzungen müssen beendet werden.
 class.com.top_logic.element.model.export.ui.I18NConstants.NEW_MODULE_CONFIGURATION.tooltip = Neue Modulkonfiguration gespeichert.
+class.com.top_logic.element.model.jdbcBinding.I18NConstants.NO_TL_MODULE_SELECTED = Kein <i>Modul</i> ausgew\uFFFDhlt.
 com.top_logic.element.boundsec.ElementBoundHelper = Elementgebundener Helfer
 com.top_logic.element.boundsec.ElementSecurityStorage = Element-Sicherheitsspeicher
 com.top_logic.element.boundsec.ElementSecurityStorage.tooltip = Der SecurityStorage speichert die Sicherheitsberechtigungen regelkonform.
@@ -1588,6 +1589,8 @@ com.top_logic.element.model.jdbcBinding.api.annotate.TLTableBinding.row-writer.t
 com.top_logic.element.model.jdbcBinding.api.annotate.TLTableBinding.tooltip = <i>Type Annotation</i>, die die Tabelle angibt, an die der annotierte Typ gebunden ist. <p> Beim Import werden Objekte des annotierten Typs aus Zeilen der angegebenen Tabelle erstellt. Beim Export werden Objekte des annotierten Typs in Zeilen der angegebenen Tabelle geschrieben. </p>
 com.top_logic.element.model.jdbcBinding.api.annotate.TLTableBinding.type-selector = Typauswahl
 com.top_logic.element.model.jdbcBinding.api.annotate.TLTableBinding.type-selector.tooltip = Optionale Typsuche für eine polymorphe Bindung. <p> Die Funktion type selector berechnet einen Subtyp des annotierten Typs, der beim Import eines Objekts aus einer bestimmten Zeile verwendet werden soll. </p>
+com.top_logic.element.model.jdbcBinding.DBSchemaGeneratorCommand = Datenbankschema generieren
+com.top_logic.element.model.jdbcBinding.DBSchemaGeneratorCommand.tooltip = Erzeugt ein Datenbankschema für das ausgewählte <i>Modul</i>.
 com.top_logic.element.model.jdbcBinding.JdbcDataImporter = Jdbc-Datenimport
 com.top_logic.element.model.jdbcBinding.JdbcDataImporter.Config.module = Modul
 com.top_logic.element.model.jdbcBinding.JdbcDataImporter.Config.module.tooltip = Das <i>Modul</i>, das die zu importierenden Typen definiert.
