--- a/com.top_logic.element/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_en.properties
@@ -35,6 +35,7 @@ class.com.top_logic.element.meta.kbbased.storage.I18NConstants.ERROR_VALUE_IS_NO
 class.com.top_logic.element.model.I18NConstants.ERROR_UNDEFINED_ATTRIBUTE_TYPE__TYPE_ATTR_LOCATION = Undefined type ''{0}'' in module in attribute ''{1}'' at ''{2}''.
 class.com.top_logic.element.model.export.ui.I18NConstants.NEW_MODULE_CONFIGURATION = New module configuration file created and entered into the application configuration. The configuration must be reloaded and all sessions must be terminated.
 class.com.top_logic.element.model.export.ui.I18NConstants.NEW_MODULE_CONFIGURATION.tooltip = New module configuration stored.
+class.com.top_logic.element.model.jdbcBinding.I18NConstants.NO_TL_MODULE_SELECTED = No <i>module</i> selected.
 com.top_logic.element.boundsec.ElementBoundHelper = Element bound helper
 com.top_logic.element.boundsec.ElementSecurityStorage = Element security storage
 com.top_logic.element.boundsec.ElementSecurityStorage.tooltip = The SecurityStorage stores the security permissions respecting rules.
@@ -1554,6 +1555,8 @@ com.top_logic.element.model.importer.XMIModelImportHandler.ModelUpload.model-def
 com.top_logic.element.model.importer.XMIModelImportHandler.ModelUpload.partial-import = Partial import
 com.top_logic.element.model.importer.XMIModelImportHandler.ModelUpload.partial-import.tooltip = Whether this model import should replace or extend existing modules. <ul> <li><code>true</code> if types of imported modules are added to the types of existing modules. A type that is imported and has the same name as an existing type replaces it.</li> <li><code>false</code> if imported modules replace existing modules.</li> </ul>
 com.top_logic.element.model.importer.XMIModelImportHandler.tooltip = <i>Command</i> requesting a model definition upload and applying the changes to the current application model. <p> This handler is able to process <i>TopLogic</i> model definition XML files and UML/XMI model definitions. </p>
+com.top_logic.element.model.jdbcBinding.DBSchemaGeneratorCommand = Generate database schema
+com.top_logic.element.model.jdbcBinding.DBSchemaGeneratorCommand.tooltip = Generates a database schema for the selected <i>module</i>.
 com.top_logic.element.model.jdbcBinding.JdbcDataImporter = Jdbc data importer
 com.top_logic.element.model.jdbcBinding.JdbcDataImporter.Config.module = Module
 com.top_logic.element.model.jdbcBinding.JdbcDataImporter.Config.module.tooltip = The <i>module</i> that defines the types to import.
