Ticket #27514: Add a generator for a `meta.xml` for a `TLModule`.

--- a/com.top_logic.element/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_de.properties
@@ -29,6 +29,7 @@ class.com.top_logic.element.meta.kbbased.storage.I18NConstants.ERROR_VALUE_IS_NO
 class.com.top_logic.element.model.I18NConstants.ERROR_UNDEFINED_ATTRIBUTE_TYPE__TYPE_ATTR_LOCATION = Undefinierter Typ ''{0}'' im Modul im Attribut ''{1}'' bei ''{2}''.
 class.com.top_logic.element.model.export.ui.I18NConstants.NEW_MODULE_CONFIGURATION = Neue Modulkonfigurationsdatei erstellt und in die Anwendungskonfiguration eingetragen. Die Konfiguration muss neu geladen werden und alle Sitzungen müssen beendet werden.
 class.com.top_logic.element.model.export.ui.I18NConstants.NEW_MODULE_CONFIGURATION.tooltip = Neue Modulkonfiguration gespeichert.
+class.com.top_logic.element.model.jdbcBinding.I18NConstants.NO_TL_MODULE_SELECTED = Kein <i>Modul</i> ausgew\uFFFDhlt.
 com.top_logic.element.boundsec.ElementBoundHelper = Elementgebundener Helfer
 com.top_logic.element.boundsec.ElementSecurityStorage = Element-Sicherheitsspeicher
 com.top_logic.element.boundsec.ElementSecurityStorage.tooltip = Der SecurityStorage speichert die Sicherheitsberechtigungen regelkonform.
@@ -1520,6 +1521,8 @@ com.top_logic.element.model.importer.XMIModelImportHandler.ModelUpload.model-def
 com.top_logic.element.model.importer.XMIModelImportHandler.ModelUpload.partial-import = Partieller Import
 com.top_logic.element.model.importer.XMIModelImportHandler.ModelUpload.partial-import.tooltip = Ob dieser Modellimport bestehende Module ersetzen oder erweitern soll. <ul> <li><code>true</code>, wenn die Typen der importierten Module zu den Typen der bestehenden Module hinzugefügt werden. Ein Typ, der importiert wird und den gleichen Namen wie ein vorhandener Typ hat, ersetzt diesen.</li> <li><code>false</code>, wenn importierte Module bestehende Module ersetzen.</li> </ul>
 com.top_logic.element.model.importer.XMIModelImportHandler.tooltip = <i>Befehlshandler</i>, der einen Modelldefinitions-Upload anfordert und die Änderungen auf das aktuelle Anwendungsmodell anwendet. <p> Dieser Handler ist in der Lage, <i>TopLogic-Modelldefinitions-XML-Dateien</i> und UML/XMI-Modelldefinitionen zu verarbeiten. </p>
+com.top_logic.element.model.jdbcBinding.DBSchemaGeneratorCommand = Datenbankschema generieren
+com.top_logic.element.model.jdbcBinding.DBSchemaGeneratorCommand.tooltip = Erzeugt ein Datenbankschema für das ausgewählte <i>Modul</i>.
 com.top_logic.element.model.jdbcBinding.JdbcDataImporter = Jdbc-Datenimport
 com.top_logic.element.model.jdbcBinding.JdbcDataImporter.Config.module = Modul
 com.top_logic.element.model.jdbcBinding.JdbcDataImporter.Config.module.tooltip = Das <i>Modul</i>, das die zu importierenden Typen definiert.
