Ticket #27514: Add a progress dialog for the JDBC data importer.

--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -3899,7 +3899,7 @@ com.top_logic.layout.messagebox.ProgressDialog$State.tooltip = The states of the
 com.top_logic.layout.messagebox.ProgressDialog.State.CANCELED = Canceled
 com.top_logic.layout.messagebox.ProgressDialog.State.CANCELED.tooltip = The background process was canceled by the user.
 com.top_logic.layout.messagebox.ProgressDialog.State.COMPLETED = Completed
-com.top_logic.layout.messagebox.ProgressDialog.State.COMPLETED.tooltip = The background process has completed sucessfully.
+com.top_logic.layout.messagebox.ProgressDialog.State.COMPLETED.tooltip = The background process has completed successfully.
 com.top_logic.layout.messagebox.ProgressDialog.State.FAILED = Failed
 com.top_logic.layout.messagebox.ProgressDialog.State.FAILED.tooltip = The background process has finished with an error.
 com.top_logic.layout.messagebox.ProgressDialog.State.RUNNING = Running
