Ticket #27514: Remove `DBSchemaChangingCommand` as it is not really worth it. There is almost no code there that is used by more than one of its two subclasses.

--- a/com.top_logic.element/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_en.properties
@@ -29,6 +29,8 @@ class.com.top_logic.element.meta.kbbased.storage.I18NConstants.ERROR_VALUE_IS_NO
 class.com.top_logic.element.model.I18NConstants.ERROR_UNDEFINED_ATTRIBUTE_TYPE__TYPE_ATTR_LOCATION = Undefined type ''{0}'' in module in attribute ''{1}'' at ''{2}''.
 class.com.top_logic.element.model.export.ui.I18NConstants.NEW_MODULE_CONFIGURATION = New module configuration file created and entered into the application configuration. The configuration must be reloaded and all sessions must be terminated.
 class.com.top_logic.element.model.export.ui.I18NConstants.NEW_MODULE_CONFIGURATION.tooltip = New module configuration stored.
+class.com.top_logic.element.model.jdbcBinding.I18NConstants.GENERATE_SCHEMA_NOTICE = This command must only be used during development on a developer system. It will leave the application in a state where it cannot be started anymore.
+class.com.top_logic.element.model.jdbcBinding.I18NConstants.GENERATE_SCHEMA_TITLE = Warning!
 class.com.top_logic.element.model.jdbcBinding.I18NConstants.NO_TL_MODULE_SELECTED = No <i>module</i> selected.
 class.com.top_logic.element.model.jdbcBinding.I18NConstants.PROGRESS_DIALOG_TITLE = JDBC data import
 com.top_logic.element.boundsec.ElementBoundHelper = Element bound helper
@@ -1527,11 +1529,13 @@ com.top_logic.element.model.jdbcBinding.DBSchemaGeneratorCommand.Config.override
 com.top_logic.element.model.jdbcBinding.DBSchemaGeneratorCommand.Config.override-existing-schema.tooltip = Whether an existing database schema should be ignored. <p> This is applied to types from the configured <i>module</i>. For types outside of it, existing tables are always used and never overridden. </p>
 com.top_logic.element.model.jdbcBinding.DBSchemaGeneratorCommand.tooltip = Generates a database schema for the selected <i>module</i>. <p> Limitations: <ul> <li>There are no tests.</li> <li>After generating it might be necessary to stop the application, delete the database and add the new <code>meta.xml</code> file to the application configuration.</li> <li>The generated <code>meta.xml</code> file has to be added manually to the application configuration.</li> <li>It has not been tested whether generating the schema leaves the application in an inconsistent state. For example the stored database schema in the <i>database properties</i> might not have been updated.</li> <li>It only generates for one <i>module</i>. Workaround: To generate for example for three modules (a, b, c), generate in the order: a, b, c, a, b. The first three iterations create the necessary tables. The next two generate the correct associations from these modules to the later modules. Between each generation, the steps given above might be necessary.</li> <li>Associations with monomorphic ends are created as non-monomorphic, as they are generated as subtypes of <code>"hasWrapperAttValueBaseAssociation"</code></li> </ul> </p>
 com.top_logic.element.model.jdbcBinding.JdbcDataImporter = Jdbc data importer
+com.top_logic.element.model.jdbcBinding.JdbcDataImporter.Config.knownProblems = Known problems
+com.top_logic.element.model.jdbcBinding.JdbcDataImporter.Config.knownProblems.tooltip = A warning or error log message matching any of these Regex patterns is ignored, i.e. not logged.
 com.top_logic.element.model.jdbcBinding.JdbcDataImporter.Config.module = Module
 com.top_logic.element.model.jdbcBinding.JdbcDataImporter.Config.module.tooltip = The <i>module</i> that defines the types to import.
 com.top_logic.element.model.jdbcBinding.JdbcDataImporter.Config.poolName = Pool name
 com.top_logic.element.model.jdbcBinding.JdbcDataImporter.Config.poolName.tooltip = Name of the connection pool to import data from.
-com.top_logic.element.model.jdbcBinding.JdbcDataImporter.tooltip = <i>Command handler</i> importing a model from an existing database. <p> Uses the following annotations: <ul> <li>TLTableBinding</li> <li>TLColumnBinding</li> <li>TLLinkTableBinding</li> <li>TLForeignKeyBinding</li> <li>TLReverseForeignKeyBinding</li> </ul> </p> <p> Limitations: The messages displayed in the log are not internationalized, yet. The method <code>ImportContext#toLogMessage(String)</code> just convert the English text with <code>ResKey#text(String)</code>. </p>
+com.top_logic.element.model.jdbcBinding.JdbcDataImporter.tooltip = <i>Command handler</i> importing a model from an existing database. <p> Uses the following annotations: <ul> <li>TLTableBinding</li> <li>TLColumnBinding</li> <li>TLLinkTableBinding</li> <li>TLForeignKeyBinding</li> <li>TLReverseForeignKeyBinding</li> </ul> </p> <p> Limitations: The messages displayed in the log are not internationalized, yet. </p>
 com.top_logic.element.model.jdbcBinding.JdbcSchemaImporter = Jdbc schema importer
 com.top_logic.element.model.jdbcBinding.JdbcSchemaImporter.Config.excludeColumnPattern = Exclude column pattern
 com.top_logic.element.model.jdbcBinding.JdbcSchemaImporter.Config.excludeColumnPattern.tooltip = Regular expression matching column names that should not be imported.
@@ -2206,8 +2210,6 @@ com.top_logic.element.structured.util.StructureRootDisabledExecRule.Config.hidde
 com.top_logic.element.structured.util.StructureRootDisabledExecRule.Config.i18n-reason-key = Internationalization reason key
 com.top_logic.element.structured.util.StructureRootDisabledExecRule.Config.i18n-reason-key.tooltip = Reason to disable the command for root objects.
 com.top_logic.element.structured.util.StructureRootDisabledExecRule.tooltip = <i>Executability rule</i> that disables or hides a command for a structure root node.
-com.top_logic.element.util.dbadmin.DBSchemaChangingCommand = Database schema changing command
-com.top_logic.element.util.dbadmin.DBSchemaChangingCommand.tooltip = <i>Command handler</i> that writes back the schema configuration to the file system. <p> During next boot, the changes will be applied (if only changes are performed that support automatic migration). </p>
 com.top_logic.element.util.dbadmin.DeleteTable = Delete table
 com.top_logic.element.util.dbadmin.DeleteTable.tooltip = <i>Command handler</i> that removes a table type, if it is not used.
 com.top_logic.element.util.dbadmin.IDESchemaExtractCommand = IDE schema extract command
